feat(tracing): add tracing library to unify tracing configurations across services

--- a/package.json
+++ b/package.json
@@ -64,6 +64,13 @@
     "@octokit/rest": "^19.0.5",
     "@octokit/webhooks": "^10.6.2",
     "@octokit/webhooks-types": "^6.9.0",
+    "@opentelemetry/exporter-metrics-otlp-grpc": "^0.40.0",
+    "@opentelemetry/exporter-trace-otlp-grpc": "^0.40.0",
+    "@opentelemetry/id-generator-aws-xray": "^1.1.2",
+    "@opentelemetry/instrumentation-aws-sdk": "^0.34.3",
+    "@opentelemetry/propagator-aws-xray": "^1.2.1",
+    "@opentelemetry/sdk-trace-base": "^1.14.0",
+    "@overbit/opentelemetry-nestjs": "^4.0.0-beta.5",
     "@primer/react": "^35.14.1",
     "@prisma/client": "^4.6.1",
     "@sendgrid/mail": "^7.7.0",
@@ -117,6 +124,7 @@
     "node-jose": "^2.2.0",
     "octokit": "^1.8.1",
     "octokit-plugin-create-pull-request": "^3.13.1",
+    "opentelemetry-instrumentation-kafkajs": "^0.35.0",
     "ora": "5.4.0",
     "pacote": "^15.0.8",
     "pascal-case": "^3.1.2",
