--- a/packages/amplication-git-pull-request-service/tsconfig.app.json
+++ b/packages/amplication-git-pull-request-service/tsconfig.app.json
@@ -4,8 +4,7 @@
     "outDir": "../../dist/out-tsc",
     "module": "commonjs",
     "types": ["node"],
-    "emitDecoratorMetadata": true,
-    "target": "es2015"
+    "emitDecoratorMetadata": true
   },
   "exclude": [
     "jest.config.e2e.ts",
