chore(client): fix tsconfig target to 2015

--- a/packages/amplication-client/tsconfig.json
+++ b/packages/amplication-client/tsconfig.json
@@ -3,6 +3,8 @@
   "compilerOptions": {
     "jsx": "react-jsx",
     "allowJs": true,
+    "target": "es2015",
+    "module": "esnext",
     "lib": ["es2021", "es2017", "dom"],
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
